--- a/src/css/global.css
+++ b/src/css/global.css
@@ -80,16 +80,16 @@ body {
 @keyframes pulses {
 	0% {
 		transform: translate(-50%, -50%) scale(0.95);
-		box-shadow: 0 0 0 0 rgba(#f1c109, 0.7);
+		box-shadow: 0 0 0 0 rgb(241 193 9 / .7);
 	}
 
 	70% {
 		transform: translate(-50%, -50%) scale(1);
-		box-shadow: 0 0 0 60px rgba(#f1c109, 0);
+		box-shadow: 0 0 0 60px rgb(241 193 9 / 0);
 	}
 
 	100% {
 		transform: translate(-50%, -50%) scale(0.95);
-		box-shadow: 0 0 0 0 rgba(#f1c109, 0);
+		box-shadow: 0 0 0 0 rgb(241 193 9 / 0);
 	}
 }
