--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,4 @@
-/* Box sizing rules */
+/* Блочная модель */
 *,
 *::before,
 *::after {
@@ -39,7 +39,7 @@ body {
 	line-height: 1.5;
 }
 
-/* Remove list styles on ul, ol elements with a class attribute */
+/* Удаляем стили у списков */
 ul[class],
 ol[class] {
 	list-style: none;
@@ -50,7 +50,7 @@ a:not([class]) {
 	text-decoration-skip-ink: auto;
 }
 
-/* Make images easier to work with */
+/* Облегчаем работу с картинками */
 img {
 	max-width: 100%;
 	display: block;
